// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CvLoading should render correctly when active, small and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading bx--loading--small"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__background"></circle>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, small and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading  0">
  <div data-loading="" class="bx--loading bx--loading--small"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__background"></circle>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, with normal size and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="0" cy="0" r="37.5" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when active, with normal size and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading  0">
  <div data-loading="" class="bx--loading"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="0" cy="0" r="37.5" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, small and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading bx--loading--small"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__background"></circle>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, small and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading  0">
  <div data-loading="" class="bx--loading--small"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__background"></circle>
      <circle cx="0" cy="0" r="26.8125" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, with normal size and not overlayed 1`] = `
<cv-wrapper-stub tagtype="" class="cv-loading">
  <div data-loading="" class="cv-loading"><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="0" cy="0" r="37.5" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;

exports[`CvLoading should render correctly when not active, with normal size and overlayed 1`] = `
<cv-wrapper-stub tagtype="div" class="cv-loading  0">
  <div data-loading="" class=""><svg viewBox="-75 -75 150 150" class="bx--loading__svg">
      <title>Loading</title>
      <!---->
      <circle cx="0" cy="0" r="37.5" class="bx--loading__stroke"></circle>
    </svg></div>
</cv-wrapper-stub>
`;
